--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,8 @@ p {
 }
 
 .page-header {
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -49,14 +50,14 @@ p {
   gap: 40px;
 }
 
-.nav-list> .nav-item> .studio {
+.nav-list > .nav-item > .studio {
   color: #404bbf;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.studio::after{
-  content: "";
+.studio::after {
+  content: '';
   width: 100%;
   position: absolute;
   left: 0;
@@ -65,7 +66,6 @@ p {
   background-color: #404bbf;
   border-radius: 2px;
 }
-
 
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -147,7 +147,11 @@ p {
 }
 
 .title {
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
   padding: 188px 0;
   max-width: 1440px;
   background-repeat: no-repeat;
@@ -185,7 +189,7 @@ p {
   padding: 16px 32px;
   min-width: 169px;
   margin: 0 auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .title-button:hover,
@@ -222,15 +226,97 @@ p {
   background-color: #f4f4fd;
   border-radius: 4px;
   border: 1px solid #8e8f99;
-  margin-bottom: 8px; 
+  margin-bottom: 8px;
 }
 
-.feature-list, .team-list,
+.feature-list,
+.team-list,
 .team-social-links_list {
-display: flex;
-gap: 24px;
+  display: flex;
+  gap: 24px;
 }
 
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+
+  /* opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms ease-in-out; */
+}
+
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-form {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 408px;
+  height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+}
+
+.modal-group + .form-label {
+  padding-top: 112px;
+  padding-left: 24px;
+  padding-bottom: 136px;
+  padding-right: 24px;
+}
+
+.form-label-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.form-label-text > .modal-span {
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.modal-span:hover,
+.modal-span:focus {
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.submit-btn {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 16px 32px;
+  min-width: 169px;
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+}
 
 .team-container {
   padding-top: 120px;
@@ -243,13 +329,13 @@ gap: 24px;
 }
 
 .team-list .link {
-display: flex;
-align-items: center;
-justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-height: 100%;
-background-color: #4d5ae5;
-border-radius: 50%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
 }
 
 .team-list .link:hover,
@@ -258,8 +344,8 @@ border-radius: 50%;
 }
 
 .team-icon {
-   fill: #f4f4fd;
-  }
+  fill: #f4f4fd;
+}
 
 .feature-item,
 .team-item {
@@ -336,10 +422,10 @@ img {
 }
 
 .team-social-links_list {
- display: flex;
- gap: 24px; 
- margin-top: 8px;
- justify-content: center;
+  display: flex;
+  gap: 24px;
+  margin-top: 8px;
+  justify-content: center;
 }
 
 .team-social-links_list .link {
@@ -375,7 +461,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 48px 24px;
-  }
+}
 
 .portfolio-list,
 .portfolio-item {
@@ -384,11 +470,12 @@ img {
 
 .portfolio-item {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
 .portfolio-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
- /* transform: translateY(0%); */
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  /* transform: translateY(0%); */
 }
 
 .portfolio-pic {
@@ -403,17 +490,18 @@ img {
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
-  position: absolute; 
+  position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover .overlay, .portfolio-item:focus .overlay {
-transform: translateY(0);
-} 
+.portfolio-item:hover .overlay,
+.portfolio-item:focus .overlay {
+  transform: translateY(0);
+}
 
 .portfolio-image {
   object-fit: cover;
@@ -478,17 +566,16 @@ transform: translateY(0);
   margin-bottom: 16px;
 }
 
-
 .footer-list-icon {
   display: flex;
- 
+
   gap: 16px;
   flex-shrink: 0;
 }
 
 .footer-item {
-    width: 40px;
-   height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .footer-list-icon .link {
@@ -499,7 +586,7 @@ transform: translateY(0);
   height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
-  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-list-icon .link:hover,
