--- a/css/styles.css
+++ b/css/styles.css
@@ -638,23 +638,27 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: #404bbf;
   border: none;
- }
+ } 
 
 .icon-close {
   padding: auto;
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn:hover >.icon-close {
+.modal-btn:hover >.icon-close, .modal-btn:focus >.icon-close {
   fill: #ffffff;
-}
+} 
+
+/* .icon-close:hover {
+  fill: #ffffff;
+} */
 
 .modal-text {
 font-weight: 500;
@@ -697,25 +701,25 @@ margin-bottom: 16px;
 
 .modal-form-input:hover, .modal-form-input:focus {
   border-color: #4d5ae5;
-}
+} 
 
 .modal-form-input:hover +.modal-icon, .modal-form-input:focus +.modal-icon {
   fill: #4D5AE5;
+  border: none;
 }
 
 
 .modal-icon {
   position: absolute;
   left: 16px;
-  top: 8px; 
-  bottom: 8px;
-  transform: translate(-50%);
+  top: 50%; 
+  transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  /* .icon-person:hover, icon-person:focus {
-    fill: #4D5AE5;
-  } */
+ .modal-form-comment {
+  margin-bottom: 16px;
+ }
 
   .modal-comment {
     width: 100%;
@@ -725,6 +729,7 @@ margin-bottom: 16px;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
     border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     background-color: transparent;
     padding: 8px 16px;
     outline: transparent;
@@ -762,13 +767,11 @@ margin-bottom: 16px;
     align-items: center;
     justify-content: center;
     fill: transparent;
-  }
-  /* .modal-privacy-input:checked +.modal-privacy-label >.privacy-span:checked {
+    }
+
+  input[type="checkbox"]:checked +.modal-privacy-label >.privacy-span {
     fill: #F4F4FD;
-    background-color: #404bbf;
-  } */
-  .privacy-span:checked {
-    fill: #F4F4FD;
+    border: none;
     background-color: #404bbf;
   } 
 
