--- a/css/styles.css
+++ b/css/styles.css
@@ -588,26 +588,26 @@ img {
   margin-left: 16px;
 }
 
-.modal-overlay {
+.backdrop {
   position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* opacity: 0;
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
   visibility: hidden;
-  pointer-events: none;
-   */
+  pointer-events: none; 
 }
 
-.modal-overlay .is-open {
+/* .backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-} 
+} */
 
 .modal-window {
   position: absolute;
@@ -638,32 +638,34 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: #404bbf;
   border: none;
- } 
+}
 
 .icon-close {
   padding: auto;
- transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn:hover >.icon-close, .modal-btn:focus >.icon-close {
+.modal-btn:hover > .icon-close,
+.modal-btn:focus > .icon-close {
   fill: #ffffff;
-} 
+}
 
 .modal-text {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
 }
 
 .modal-form {
@@ -682,7 +684,7 @@ margin-bottom: 16px;
 
 .modal-label-input {
   position: relative;
-  }
+}
 
 .modal-form-input {
   width: 100%;
@@ -695,112 +697,123 @@ margin-bottom: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
-.modal-form-input:hover, .modal-form-input:focus {
+.modal-form-input:hover,
+.modal-form-input:focus {
   border-color: #4d5ae5;
-} 
-
-.modal-form-input:hover +.modal-icon, .modal-form-input:focus +.modal-icon {
-  fill: #4D5AE5;
-  border: none;
 }
 
+.modal-form-input:hover + .modal-icon,
+.modal-form-input:focus + .modal-icon {
+  fill: #4d5ae5;
+  border: none;
+}
 
 .modal-icon {
   position: absolute;
   left: 16px;
-  top: 50%; 
+  top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
- .modal-form-comment {
+.modal-form-comment {
   margin-bottom: 16px;
- }
+}
 
-  .modal-comment {
-    width: 100%;
-    height: 120px;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    background-color: transparent;
-    padding: 8px 16px;
-    outline: transparent;
-    resize: none;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+.modal-comment {
+  width: 100%;
+  height: 120px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  .modal-comment:hover, .modal-comment:focus {
-    border-color: #4D5AE5;
-  }
+.modal-comment:hover,
+.modal-comment:focus {
+  border-color: #4d5ae5;
+}
 
-  .modal-comment::placeholder {
-   color: rgba(46, 47, 66, 0.4);
-  }
+.modal-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
 
-  .modal-privacy {
-    margin-bottom: 24px;
-  }
+.modal-cont-checkbox {
+  margin-bottom: 24px;
+}
 
-  .modal-privacy-label {
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-  }
+.modal-privacy-checkbox {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  fill: #f4f4fd;
+}
 
-  .privacy-span {
-    margin-right: 8px;
-    width: 16px;
-    height: 16px;
-    border:  1px solid rgba(46, 47, 66, 0.4);;
-    border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    }
+.checkbox-custom {
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+}
 
-    .modal-privacy-input[type="checkbox"]:checked +.modal-privacy-label>.privacy-span {
-    fill: #F4F4FD;
-    border: none;
-    background-color: #404bbf;
-  } 
+.checkbox[type="checkbox"]:checked
+  + .modal-privacy-checkbox > .checkbox-custom {
+  fill: #f4f4fd;
+  border-color: none;
+  background-color: #404bbf;
+}
 
-  .privacy-page {
-    line-height: 1.33;
-    text-decoration: underline;
-    text-decoration-skip-ink: none;
-    color: #4d5ae5;
-  }
+.privacy-page {
+  line-height: 1.33;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+  cursor: pointer;
+}
 
-  .modal-send {
-    display: block;
-    min-width: 169px;
-    margin: 0 auto;
-    border-radius: 4px;
-    padding: 16px 32px;
-    height: 56px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    text-align: center;
-    color: #fff;
-    cursor: pointer;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background: #4d5ae5;
-    border: none;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+.modal-send {
+  display: block;
+  min-width: 169px;
+  margin: 0 auto;
+  border-radius: 4px;
+  padding: 16px 32px;
+  height: 56px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  .modal-send:hover, .modal-send:focus {
-    background-color: #404bbf;
-  text-decoration: underline; 
-  }
+.modal-send:hover,
+.modal-send:focus {
+  background-color: #404bbf;
+  text-decoration: underline;
+}
